# zumopi_telemetry_system

./: README.md  ros2_script.sh  setup_script.sh  zumopi_script.sh
arduino_serial_interface/: arduino_serial_interface.ino
ros2_ws/src/telemetry_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/telemetry_bringup/launch/: data_gen.launch.py  gui.launch.py  telemetry.launch.py
ros2_ws/src/telemetry_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/telemetry_interfaces/msg/: Battery.msg  Buzzer.msg  CameraSettings.msg  CompressedImage.msg  EnableRead.msg  Encoders.msg  Imu.msg  Motors.msg  PlayBuzzer.msg  ProximitySensors.msg  SamplingRate.msg  UPSSettings.msg  WifiStats.msg  Zumo.msg
ros2_ws/src/telemetry_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/telemetry_pkg/telemetry_pkg/: camera_gen.py  gui.py  joystick.py  serial_interface_gen.py  telemetry_ui.py  telemetry_ui.ui  ups_gen.py  utilities.py
